# unicode-security

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rustfmt.yml  tests.yml
scripts/: unicode.py
src/: confusable_detection.rs  general_security_profile.rs  lib.rs  mixed.rs  mixed_script.rs  restriction_level.rs  rustc_mixed_script_confusable_detection.rs  tables.rs  tests.rs
